2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/CommandItemCodon.cs,
	  MonoDevelop.Components.Commands/CommandMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandCheckMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandEntry.cs: It's now possible to
	  override labels in the CommandItemCodon.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml: Update MD version.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Components.Commands/CommandEntry.cs: Remove command
	  accelerator underscores from tooltips.

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/CommandCategoryCodon.cs,
	  MonoDevelop.Components.Commands.ExtensionNodes/CommandCodon.cs:
	  Extension nodes don't need to be public.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Before executing the
	  command bound to a shortcut, check if the command is enabled.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/LinkCommandEntry.cs: Moved PlatformService
	  to MD.Core.Gui. Removed old FileIconService class, which is now
	  implemented in PlatformService.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml: Bump add-in versions.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.DockToolbars/DockGrip.cs: Fix orientation of
	  toolbar grip. Fixes bug #346764.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Components.Commands/LinkCommandEntry.cs: Use the new RuntimeService
	  instead of Gnome.Url.Show.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 
