@@ -1,3 +1,11 @@
+2008-02-14  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
+	  MonoDevelop.Components.mdp, MonoDevelop.Components/TreeViewState.cs,
+	  MonoDevelop.Components/NotebookButtonBar.cs: Added TreeViewState class,
+	  which helps saving/restoring the state of a tree view. Added
+	  NotebookButtonBar.
+
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Components.Commands.ExtensionNodes/CommandItemCodon.cs,
